Fix Blanka health going over limit and intro title wrapping

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -509,7 +509,7 @@ section.intro{
     // padding: max(10vh, 70px) max(10vw, 70px);
 
     .upper-intro{
-        width: 60%;
+        width: 100%;
         display: flex;
         flex-flow: row nowrap;
         justify-content: center;
